# rapids

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  builddocs.sh  docwatch.sh  flake.nix  rust-toolchain.toml
benches/: encoding_perf.rs
examples/test-server/: main.rs
examples/test-server/client/: .gitignore  README.md  bun.lockb  client.ts  package.json  schema.ts  server.ts
examples/test-server/services/: adder.rs  example.rs  mod.rs
src/: codecs.rs  dispatch.rs  lib.rs  utils.rs
src/types/: codecs.rs  control.rs  message_types.rs  misc.rs  mod.rs  result.rs
